--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-test-renderer": "18.2.0",
+    "swr": "^2.2.0",
     "ts-jest": "29.0.2",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
